[metadata]
name = samtest
author = OpenStack Foundation
author-email = openstack-dev@lists.openstack.org
summary = OpenStack's setup automation in a reusable form
description-file = README
home-page = https://launchpad.net/pbr
license = Apache-2
classifier =
    Development Status :: 4 - Beta
        Environment :: Console
        Environment :: OpenStack
        Intended Audience :: Developers
        Intended Audience :: Information Technology
        License :: OSI Approved :: Apache Software License
        Operating System :: OS Independent
        Programming Language :: Python
keywords =
    setup
    distutils
[files]
packages =
    samtest
data_files =
    /etc/samtest = etc/*
    etc/init =
        samtest.test.conf
[entry_points]
console_scripts =
    samtest = samtest.cmd:main
    sampaste = samtest.paste_serv:main
samtest.stevedore_test.formatter = 
    simple = samtest.stevedore_test.simple:Simple
    field = samtest.stevedore_test.fields:FieldsList
    plain = samtest.stevedore_test.simple:Simple
